--- a/Vcrs.Umbraco/Views/Partials/vcrsTopNavigation.cshtml
+++ b/Vcrs.Umbraco/Views/Partials/vcrsTopNavigation.cshtml
@@ -1,4 +1,6 @@
-﻿@inherits UmbracoTemplatePage
+﻿@using System.Configuration
+@using Vcrs.Core.Client.Extensions
+@inherits UmbracoTemplatePage
 @{
     // Model.Content is the current page that we're on
     // AncestorsOrSelf is all of the ancestors this page has in the tree
@@ -16,7 +18,14 @@
         <div class="header-helper">
             <button class="menu-toggler" data-toggle-mobilenav></button>
             <a href="/" class="logo-container">
-                <h1>VCRS Demo Dealer</h1>
+                <h1>
+                    VCRS Demo Dealer
+                    vcrs:ResourceUrl:@ConfigurationManager.AppSettings["vcrs:ResourceUrl"],
+                    vcrs:ServiceUrl:@ConfigurationManager.AppSettings["vcrs:ServiceUrl"],
+                    vcrs:ResourceUrl:@SettingsHelper.GetSetting("vcrs:ResourceUrl"),
+                    vcrs:ServiceUrl:@SettingsHelper.GetSetting("vcrs:ServiceUrl"),
+                    
+                </h1>
             </a>
             <div class="navigation-container hidden-lt-md">
                 <div class="navigation">
